--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="./project.html">login</a></li>
         <li><a href="./signup.html">SignIn</a></li>
         <li><a href="#events">Events</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="./conatct.html">Contact</a></li>
       </ul>
     </nav>
   </header>
