--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="./project.html">login</a></li>
         <li><a href="./signup.html">SignIn</a></li>
-        <li><a href="#events">Events</a></li>
+        <li><a href="./code.html">project</a></li>
         <li><a href="./conatct.html">Contact</a></li>
       </ul>
     </nav>
