--- a/code.html
+++ b/code.html
@@ -1,11 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project Showcase</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        .project-section {
+            padding: 50px;
+            background-color: #e0e0e0;
+        }
+
+        .project-container {
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        .project-block {
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            flex: 1;
+            padding: 20px;
+            text-align: center;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .project-block:hover {
+            transform: translateY(-10px);
+        }
+
+        .project-title {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 10px;
+            color: #333;
+        }
+
+        .project-description {
+            font-size: 16px;
+            color: #666;
+            margin-bottom: 15px;
+        }
+
+        .project-block a {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .project-block a:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
+
 <body>
-    
+
+    <div class="project-section">
+        <h2 style="text-align: center; font-size: 32px; margin-bottom: 40px;">Project Showcase</h2>
+        <div class="project-container">
+
+            <!-- Money Management System Block -->
+            <div class="project-block">
+                <h3 class="project-title">Money Management System</h3>
+                <p class="project-description">
+                    The Money Management System helps users track their income and expenses, providing insights into
+                    spending habits. It features detailed analytics, charts, and budgeting options for better financial planning.
+                </p>
+                <a href="https://github.com/Tanmay-Joshi73/Money_Management_System">Learn More</a>
+            </div>
+
+            <!-- Face Detection Block -->
+            <div class="project-block">
+                <h3 class="project-title">fitness tracker</h3>
+                <p class="project-description">
+                    this prject allow you to check your fitness like BMI range etc
+                </p>
+                <a href="https://tanmay-joshi73.github.io/Fitness-Tracker/">Learn More</a>
+            </div>
+
+            <!-- BCD Converter Block -->
+            <div class="project-block">
+                <h3 class="project-title">BCD Converter</h3>
+                <p class="project-description">
+                    The BCD (Binary-Coded Decimal) Converter is a tool that converts binary numbers into their decimal equivalents, primarily used in digital systems where binary inputs are converted to displayable decimal values.
+                </p>
+                <a href="https://tanmay-joshi73.github.io/BCD-Convertor/">Learn More</a>
+            </div>
+
+        </div>
+    </div>
+
 </body>
+
 </html>
